@@ -39,6 +39,6 @@ class PointSlopeEquationControls extends EquationControls {
         super( MessageFormat.format( "({0} - {1}) = {2}({3} - {4})", /* (y - y1) = m(x - x1) */
                                      Strings.SYMBOL_Y, Strings.SYMBOL_Y1, Strings.SYMBOL_SLOPE, Strings.SYMBOL_X, Strings.SYMBOL_X1 ),
                interactiveLine, savedLines, maximized, linesVisible,
-               new PointSlopeEquationNode( interactiveLine, riseRange, runRange, x1Range, y1Range ) );
+               new PointSlopeInteractiveEquationNode( interactiveLine, riseRange, runRange, x1Range, y1Range ) );
     }
 }
